# FinTrack

./: .gitignore  README.md  pyproject.toml
config/: settings.py
fintrack/domain/entities/: transaction.py
fintrack/domain/exceptions/: domain_exceptions.py
