[project]
name            = "fintrack"
version         = "0.1.0"
description     = "Personal finance micro-SaaS API"
requires-python = ">=3.12"

dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.4",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "factory-boy>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "factory-boy>=3.3",
]

[tool.ruff]
line-length = 88
select      = ["E", "F", "I", "UP"]

[tool.mypy]
plugins            = ["mypy_django_plugin.main"]
strict             = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files           = ["test_*.py"]
addopts                = "--cov=fintrack --cov-report=term-missing"